fixed issues on mobileview

--- a/src/components/layout/Menu/MainMenu.module.scss
+++ b/src/components/layout/Menu/MainMenu.module.scss
@@ -52,7 +52,7 @@
       filter: brightness(0.75);
 
       @media screen and (max-width: 450px) {
-        margin: 15px 0 0 5px;
+        margin: 15px 0 0 15px;
       }
     }
 
