--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -67,7 +67,7 @@ $shadow: #2b393d;
 
       @media screen and (max-width: 450px) {
         width: 18.5rem;
-        height: 28.5rem;
+        height: 29.5rem;
         margin: -60px auto 0px auto;
         padding: 1.5rem;
         font-size: 0.9rem;
@@ -147,7 +147,7 @@ $shadow: #2b393d;
       }
 
       @media screen and (max-width: 450px) {
-        margin: 25px auto 0 auto;
+        margin: 15px auto 0 auto;
         font: bold 1.1em "Trebuchet MS", Arial, Helvetica;
       }
     }
